# sentinelstream

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.ai/: architecture.md  current_state.md  development_rules.md  project_context.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260722_0001_create_log_events_table.py  20260722_0002_create_anomaly_findings_table.py  20260722_0003_create_incident_tables.py
app/: __init__.py
app/application/: exceptions.py
app/application/anomalies/: __init__.py  contracts.py  detector.py  policy.py  rules.py
app/application/contracts/: __init__.py  anomaly_reader.py  clock.py  detection_persistence.py  event_processor.py  event_queue.py  incident_reader.py  reader.py  repository.py
app/application/incidents/: __init__.py  contracts.py  exceptions.py  generation.py  grouper.py  identity.py  models.py  persistence.py
app/application/queries/: __init__.py  anomalies.py  anomaly_cursor.py  cursor.py  incident_cursor.py  incidents.py  logs.py
app/application/services/: __init__.py  ingestion.py  (+3 more)
app/domain/: __init__.py
app/monitoring/: __init__.py  logging.py
app/shared/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_anomaly_query_api.py  test_database_lifecycle.py  test_health.py  test_incident_query_api.py  test_lifespan.py  test_log_query_api.py  test_logs.py
tests/integration/: test_day15_5_window.py  test_day15_runtime.py  test_incident_generation.py  test_postgresql.py
tests/unit/: test_config.py
(+73 files in other folders)
